crates/cli/tests/snapshots/help__changeset_revert.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"changeset\", \"revert\", \"--help\"])"
---
Revert an applied changeset

Usage: omacell changeset revert [OPTIONS] <ID>

Arguments:
  <ID>  Changeset id

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --theme <FILE>          Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
