crates/cli/tests/snapshots/help__config_reset.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"config\", \"reset\", \"--help\"])"
---
Restore package defaults (backup first)

Usage: omacell config reset [OPTIONS] [FILE]

Arguments:
  [FILE]  Relative file under `~/.config/omacell` (default `config.toml`)

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
