crates/cli/tests/snapshots/help__diff.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"diff\", \"--help\"])"
---
Semantic `.xlsx` diff

Usage: omacell diff [OPTIONS] <A> <B>

Arguments:
  <A>  First workbook
  <B>  Second workbook

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --theme <FILE>          Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
